Adding some autoconfiguration

--- a/test_apps/sb_jparest_hikari_jdbc/src/main/resources/application.properties
+++ b/test_apps/sb_jparest_hikari_jdbc/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
+## JPA
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
