--- a/test_apps/sb_webflux_r2dbcpool_r2dbc/pom.xml
+++ b/test_apps/sb_webflux_r2dbcpool_r2dbc/pom.xml
@@ -29,6 +29,11 @@
             <version>1.0.0.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot.experimental</groupId>
+            <artifactId>spring-boot-autoconfigure-r2dbc</artifactId>
+            <version>0.1.0.M1</version>
+        </dependency>
+        <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-postgresql</artifactId>
             <version>0.8.0.RELEASE</version>
