--- a/test_apps/sb_webflux_r2dbcpool_r2dbc/src/main/resources/application.properties
+++ b/test_apps/sb_webflux_r2dbcpool_r2dbc/src/main/resources/application.properties
@@ -8,15 +8,16 @@
 #spring.datasource.password=Welcome01
 
 #if autoconfigure works
-#spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
-#spring.r2dbc.username=postgres
-#spring.r2dbc.password=Welcome01
-
-spring.r2dbc.host=localhost
-spring.r2dbc.port=5432
-spring.r2dbc.database=postgres
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
 spring.r2dbc.username=postgres
 spring.r2dbc.password=Welcome01
+spring.r2dbc.initialization-mode=always
+
+#spring.r2dbc.host=localhost
+#spring.r2dbc.port=5432
+#spring.r2dbc.database=postgres
+#spring.r2dbc.username=postgres
+#spring.r2dbc.password=Welcome01
 
 #drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create
