--- a/test_apps/sb_webflux_nopool_r2dbc/pom.xml
+++ b/test_apps/sb_webflux_nopool_r2dbc/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.amis.smeetsm</groupId>
-    <artifactId>sb_webflux_r2dbcpool_r2dbc</artifactId>
+    <artifactId>sb_jparest_hikari_r2dbc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>sb_jparest_hikari_jdbc</name>
-    <description>Spring Boot R2DBC using connection pool</description>
+    <name>sb_webflux_nopool_r2dbc</name>
+    <description>Spring Boot R2DBC no connection pool</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -36,11 +36,6 @@
         <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-postgresql</artifactId>
-            <version>0.8.0.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>io.r2dbc</groupId>
-            <artifactId>r2dbc-pool</artifactId>
             <version>0.8.0.RELEASE</version>
         </dependency>
     </dependencies>
