--- a/test_apps/sb_webflux_nopool_r2dbc/pom.xml
+++ b/test_apps/sb_webflux_nopool_r2dbc/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.amis.smeetsm</groupId>
-    <artifactId>sb_jparest_hikari_r2dbc</artifactId>
+    <artifactId>sb_webflux_nopool_r2dbc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>sb_webflux_nopool_r2dbc</name>
     <description>Spring Boot R2DBC no connection pool</description>
