--- a/test_apps/sb_jparest_hikari_jdbc/src/main/resources/application.properties
+++ b/test_apps/sb_jparest_hikari_jdbc/src/main/resources/application.properties
@@ -9,6 +9,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Welcome01
-
-#drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
