Setting datasource size to 100

--- a/test_apps/qs_resteasy_agroalpool_jdbc/src/main/resources/application.properties
+++ b/test_apps/qs_resteasy_agroalpool_jdbc/src/main/resources/application.properties
@@ -6,3 +6,5 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=Welcome01
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=schema.sql
+quarkus.datasource.min-size=100
+quarkus.datasource.max-size=100
