--- a/test_apps/qs_resteasy_r2dbcpool_r2dbc/src/main/resources/application.properties
+++ b/test_apps/qs_resteasy_r2dbcpool_r2dbc/src/main/resources/application.properties
@@ -3,3 +3,5 @@
 quarkus.datasource.url=vertx-reactive:postgresql://localhost:5432/postgres
 quarkus.datasource.username=postgres
 quarkus.datasource.password=Welcome01
+quarkus.datasource.min-size=100
+quarkus.datasource.max-size=100
