--- a/test_apps/jaxrsrxjava_jpa_hikari_jdbc/src/main/resources/application.properties
+++ b/test_apps/jaxrsrxjava_jpa_hikari_jdbc/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Welcome01
 spring.datasource.initialization-mode=always
+spring.datasource.hikari.maximum-pool-size=100
