Updating pool size property name

--- a/test_apps/sb_jpa_hikari_jdbc/src/main/resources/application.properties
+++ b/test_apps/sb_jpa_hikari_jdbc/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=100
+spring.datasource.hikari.maximum-pool-size=100
 
 ## JPA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
