--- a/test_apps/sb_webflux_r2dbcpool_r2dbc/src/main/resources/application.properties
+++ b/test_apps/sb_webflux_r2dbcpool_r2dbc/src/main/resources/application.properties
@@ -11,8 +11,9 @@
 spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
 spring.r2dbc.username=postgres
 spring.r2dbc.password=Welcome01
-spring.r2dbc.max-size=100
-spring.r2dbc.initialization-mode=always
+spring.r2dbc.pool.max-size=100
+#spring.r2dbc.max-size=100
+#spring.r2dbc.initialization-mode=always
 
 #spring.r2dbc.host=localhost
 #spring.r2dbc.port=5432
